--- a/app/src/main/res/layout/create_delivery.xml
+++ b/app/src/main/res/layout/create_delivery.xml
@@ -23,7 +23,8 @@
         android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/round_corners"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.15"
@@ -38,7 +39,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/round_corners"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
         app:layout_constraintHorizontal_bias="0.487"
@@ -51,7 +53,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/round_corners"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.25"
         app:layout_constraintHorizontal_bias="0.487"
@@ -64,6 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="32sp"
         android:text="@string/create"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,13 +77,16 @@
         app:layout_constraintTop_toBottomOf="@+id/view4"
         app:layout_constraintVertical_bias="0.287"
         app:layout_constraintWidth_percent="0.8"
-        tools:ignore="VisualLintButtonSize" />
+        tools:ignore="VisualLintButtonSize"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/backD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        style="@style/materialButtonStyleBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:textAlignment="center"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -98,6 +105,7 @@
         android:hint="@string/enter_receivID"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.065"
@@ -115,6 +123,7 @@
         android:clickable="true"
         android:contentDescription="@string/qrScan"
         android:scaleType="centerCrop"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.065"
@@ -133,6 +142,7 @@
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:ems="10"
+        android:elevation="10dp"
         android:gravity="start|top"
         android:hint="@string/enter_note"
         android:importantForAutofill="no"
@@ -155,6 +165,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/delType"
         android:textStyle="bold"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.04"
         app:layout_constraintHorizontal_bias="0.512"
@@ -170,6 +182,8 @@
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:text="@string/economy"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
         app:layout_constraintHorizontal_bias="0.102"
@@ -185,6 +199,8 @@
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:text="@string/standard"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
         app:layout_constraintHorizontal_bias="0.102"
@@ -200,6 +216,8 @@
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:text="@string/fast"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
         app:layout_constraintHorizontal_bias="0.102"
@@ -216,6 +234,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/noteText"
         android:textStyle="bold"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintHeight_percent="0.04"
         app:layout_constraintHorizontal_bias="0.512"
@@ -231,6 +251,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/enter_receivIDText"
         android:textStyle="bold"
+        style="@style/materialTabStyle"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.04"
