--- a/app/src/main/res/drawable/round_corners.xml
+++ b/app/src/main/res/drawable/round_corners.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="#48FFFFFF"/>
-    <stroke android:color="#000" android:width="1dp"/>
-    <corners android:radius="20dp"/>
+    <corners android:radius="15dp"/>
+    <gradient
+        android:startColor="#D1D1D1"
+        android:endColor="#D1D1D1"
+        android:angle="45"/>
 </shape>
