--- a/app/src/main/res/layout-sw600dp/carousel.xml
+++ b/app/src/main/res/layout-sw600dp/carousel.xml
@@ -9,14 +9,15 @@
         android:id="@+id/delivery"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         android:contentDescription="image1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="1"
+        app:layout_constraintHeight_percent="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.95" />
+        app:layout_constraintWidth_percent="0.85" />
 
     <TextView
         android:id="@+id/textViewStatus"
@@ -25,6 +26,8 @@
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="viewStart"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/delivery"
         app:layout_constraintEnd_toEndOf="@+id/delivery"
         app:layout_constraintHeight_percent="0.15"
@@ -42,6 +45,8 @@
         android:autoSizeTextType="uniform"
         android:textAlignment="viewStart"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/delivery"
         app:layout_constraintEnd_toEndOf="@+id/delivery"
         app:layout_constraintHeight_percent="0.15"
@@ -58,6 +63,8 @@
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="viewStart"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/delivery"
         app:layout_constraintEnd_toEndOf="@+id/delivery"
         app:layout_constraintHeight_percent="0.15"
@@ -74,8 +81,9 @@
         android:layout_height="0dp"
         android:clickable="false"
         android:focusable="false"
+        android:elevation="10dp"
         android:focusableInTouchMode="false"
-        android:progressTint="@color/orange"
+        android:progressTint="@color/color4"
         app:layout_constraintBottom_toBottomOf="@+id/delivery"
         app:layout_constraintEnd_toEndOf="@+id/delivery"
         app:layout_constraintHeight_percent="0.2"
@@ -95,6 +103,8 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:visibility="gone"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/delivery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
