--- a/app/src/main/res/layout-sw600dp/delivery.xml
+++ b/app/src/main/res/layout-sw600dp/delivery.xml
@@ -10,7 +10,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.37"
@@ -26,6 +27,8 @@
         android:layout_marginTop="8dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/note"
         app:layout_constraintEnd_toEndOf="@+id/note"
         app:layout_constraintHeight_percent="0.3"
@@ -43,6 +46,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/note"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/note"
         app:layout_constraintEnd_toEndOf="@+id/note"
         app:layout_constraintHeight_percent="0.03"
@@ -56,7 +61,8 @@
         android:id="@+id/status"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
@@ -72,6 +78,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/status"
         app:layout_constraintEnd_toEndOf="@+id/status"
         app:layout_constraintHeight_percent="0.03"
@@ -87,6 +95,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.487"
@@ -100,6 +110,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/time"
         app:layout_constraintEnd_toEndOf="@+id/time"
         app:layout_constraintHeight_percent="0.03"
@@ -117,6 +129,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/delivy_time"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="@+id/time"
         app:layout_constraintHeight_percent="0.03"
         app:layout_constraintHorizontal_bias="0.512"
@@ -129,7 +143,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.487"
@@ -143,6 +158,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/sent"
         app:layout_constraintEnd_toEndOf="@+id/sent"
         app:layout_constraintHeight_percent="0.03"
@@ -160,6 +177,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/sent"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="@+id/sent"
         app:layout_constraintHeight_percent="0.03"
         app:layout_constraintHorizontal_bias="0.512"
@@ -171,7 +190,8 @@
         android:id="@+id/from"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
@@ -187,6 +207,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/from"
         app:layout_constraintEnd_toEndOf="@+id/from"
         app:layout_constraintHeight_percent="0.03"
@@ -206,5 +228,6 @@
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"
+        style="@style/materialButtonStyle"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
