--- a/app/src/main/res/layout-sw600dp/home.xml
+++ b/app/src/main/res/layout-sw600dp/home.xml
@@ -15,29 +15,34 @@
             android:id="@+id/mapH"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/round_corners"
+            android:elevation="10dp"
+            style="@style/materialTabStyle"
             android:contentDescription="@string/map"
             android:scaleType="centerInside"
             android:src="@drawable/journey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHorizontal_bias="0.07"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/viewPager"
-            app:layout_constraintVertical_bias="0.441"
-            app:layout_constraintWidth_percent="0.85" />
+            app:layout_constraintVertical_bias="0.446"
+            app:layout_constraintWidth_percent="0.4" />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#FCAC32"
+            android:background="@color/color3"
             android:contentDescription="@string/logo"
             android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintWidth_percent="1"
             app:srcCompat="@drawable/quickbox_logo" />
 
@@ -45,19 +50,18 @@
             android:id="@+id/profileH"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#FBAB32"
-            android:backgroundTint="#FBAB32"
+            android:background="@color/color3"
             android:contentDescription="@string/avatar"
             android:scaleType="centerCrop"
             android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.08"
-            app:layout_constraintHorizontal_bias="0.939"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintHorizontal_bias="0.971"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.042"
-            app:layout_constraintWidth_percent="0.15"
+            app:layout_constraintVertical_bias="0.045"
+            app:layout_constraintWidth_percent="0.06"
             tools:srcCompat="@tools:sample/avatars"
             tools:visibility="visible" />
 
@@ -65,29 +69,32 @@
             android:id="@+id/viewPager"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHorizontal_bias="0.038"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createDel"
-            app:layout_constraintWidth_percent="0.9"
+            app:layout_constraintTop_toBottomOf="@+id/logo"
+            app:layout_constraintWidth_percent="0.45"
             tools:visibility="invisible" />
 
         <Button
             android:id="@+id/createDel"
+            style="@style/materialButtonStyle"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="24dp"
             android:autoSizeMaxTextSize="30sp"
             android:autoSizeTextType="uniform"
             android:text="@string/create_delivery"
             android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.07"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintHorizontal_bias="0.638"
+            app:layout_constraintStart_toEndOf="@+id/viewPager"
             app:layout_constraintTop_toBottomOf="@+id/logo"
-            app:layout_constraintWidth_percent="0.85"
+            app:layout_constraintVertical_bias="0.05"
+            app:layout_constraintWidth_percent="0.4"
             tools:ignore="VisualLintButtonSize" />
 
 
