--- a/app/src/main/res/layout-sw600dp/language.xml
+++ b/app/src/main/res/layout-sw600dp/language.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/orange"
+        android:background="@color/color3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
@@ -46,11 +46,11 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHeight_percent="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.344"
-        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintWidth_percent="0.3"
         tools:visibility="visible" />
 
     <Button
@@ -63,11 +63,12 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLE"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.6" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/slovak"
@@ -79,11 +80,12 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLS"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.6" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/backD"
@@ -95,7 +97,8 @@
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"
+        style="@style/materialButtonStyle"/>
 
     <TextView
         android:id="@+id/currLE"
@@ -109,11 +112,11 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHeight_percent="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slovak"
         app:layout_constraintVertical_bias="0.059"
-        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintWidth_percent="0.3"
         tools:visibility="visible" />
 
     <TextView
@@ -125,7 +128,7 @@
         android:text="@string/changeLang"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHeight_percent="0.05"
