--- a/app/src/main/res/layout-sw600dp/mapsignup.xml
+++ b/app/src/main/res/layout-sw600dp/mapsignup.xml
@@ -26,7 +26,8 @@
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/confirm"
@@ -37,12 +38,13 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.945"
-        app:layout_constraintWidth_percent="0.6"
-        app:layout_constraintHeight_percent="0.08"/>
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintHeight_percent="0.06"
+        style="@style/materialButtonStyle"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
