--- a/app/src/main/res/layout-sw600dp/profile.xml
+++ b/app/src/main/res/layout-sw600dp/profile.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/orange"
+        android:background="@color/color3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,66 +21,73 @@
 
     <Button
         android:id="@+id/history"
+        style="@style/materialButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/history"
-        android:textAlignment="center"
+        android:layout_marginTop="60dp"
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
+        android:text="@string/history"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        tools:ignore="VisualLintButtonSize"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.4"
+        tools:ignore="VisualLintButtonSize" />
 
     <Button
         android:id="@+id/language"
+        style="@style/materialButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/language"
-        android:textAlignment="center"
+        android:layout_marginTop="32dp"
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
+        android:text="@string/language"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/history"
-        tools:ignore="VisualLintButtonSize"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.4"
+        tools:ignore="VisualLintButtonSize" />
 
     <Button
         android:id="@+id/signout"
+        style="@style/materialButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/signout"
-        android:textAlignment="center"
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
+        android:text="@string/signout"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/qr_code"
-        app:layout_constraintVertical_bias="0.463"
-        tools:ignore="VisualLintButtonSize"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintTop_toBottomOf="@+id/language"
+        app:layout_constraintVertical_bias="0.745"
+        app:layout_constraintWidth_percent="0.4"
+        tools:ignore="VisualLintButtonSize" />
 
     <ImageView
         android:id="@+id/qr_code"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="36dp"
         android:contentDescription="@string/qrcode"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHeight_percent="0.55"
+        app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/language"
-        app:layout_constraintWidth_percent="0.65" />
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="0.516"
+        app:layout_constraintWidth_percent="0.4" />
 
     <TextView
         android:id="@+id/nameP"
@@ -90,7 +97,7 @@
         android:autoSizeTextType="uniform"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.05"
@@ -98,7 +105,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16"
-        app:layout_constraintWidth_percent="0.9" />
+        app:layout_constraintWidth_percent="0.5" />
 
     <TextView
         android:id="@+id/emailP"
@@ -108,7 +115,7 @@
         android:autoSizeMaxTextSize="16sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
@@ -116,7 +123,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameP"
         app:layout_constraintVertical_bias="0.25"
-        app:layout_constraintWidth_percent="0.9" />
+        app:layout_constraintWidth_percent="0.5" />
 
     <Button
         android:id="@+id/backP"
@@ -128,6 +135,7 @@
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"
+        style="@style/materialButtonStyle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
