--- a/app/src/main/res/layout-sw600dp/signin.xml
+++ b/app/src/main/res/layout-sw600dp/signin.xml
@@ -9,7 +9,7 @@
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FCAE31"
+        android:background="@color/color3"
         android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,11 +28,12 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:layout_constraintVertical_bias="0.305"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/materialButtonStyle"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -49,11 +50,11 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
         app:layout_constraintVertical_bias="0.09"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -70,11 +71,11 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcome"
         app:layout_constraintVertical_bias="0.142"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <TextView
         android:id="@+id/signin"
@@ -86,11 +87,11 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintVertical_bias="0.076"
-        app:layout_constraintWidth_percent="0.4" />
+        app:layout_constraintWidth_percent="0.2" />
 
     <TextView
         android:id="@+id/welcome"
@@ -103,10 +104,10 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.04"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signin"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="0.3" />
 
 
     <TextView
@@ -123,12 +124,12 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHeight_percent="0.035"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createacc"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.2"
+        app:layout_constraintWidth_percent="0.1"
         tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
@@ -142,12 +143,12 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintHeight_percent="0.035"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
         app:layout_constraintVertical_bias="0.158"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <ProgressBar
         android:id="@+id/progressBarUp"
