--- a/app/src/main/res/layout-sw600dp/signup.xml
+++ b/app/src/main/res/layout-sw600dp/signup.xml
@@ -5,35 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/mapS"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/round_corners"
-        android:contentDescription="@string/map"
-        android:scaleType="centerInside"
-        android:src="@drawable/journey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passw"
-        app:layout_constraintWidth_percent="0.8" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="136dp"
         android:autoSizeMaxTextSize="40sp"
         android:autoSizeTextType="uniform"
         android:text="@string/sign_up"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4" />
+        app:layout_constraintWidth_percent="0.2" />
 
     <TextView
         android:id="@+id/textView3"
@@ -45,11 +30,11 @@
         android:text="@string/please_fill_all_the_fields_below"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHeight_percent="0.04"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <TextView
         android:id="@+id/error"
@@ -60,33 +45,16 @@
         android:autoSizeTextType="uniform"
         android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHeight_percent="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintWidth_percent="0.8" />
-
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:autoSizeMaxTextSize="18sp"
-        android:autoSizeTextType="uniform"
-        android:ems="10"
-        android:hint="@string/enter_name"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.055"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/error"
-        app:layout_constraintWidth_percent="0.8"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintWidth_percent="0.3" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:ems="10"
@@ -94,17 +62,53 @@
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.055"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name"
-        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintWidth_percent="0.3"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <ImageButton
+        android:id="@+id/mapS"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
+        android:contentDescription="@string/map"
+        android:scaleType="centerInside"
+        android:src="@drawable/journey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHorizontal_bias="0.543"
+        app:layout_constraintStart_toEndOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/error"
+        app:layout_constraintWidth_percent="0.3" />
+
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
+        android:ems="10"
+        android:hint="@string/enter_name"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/error"
+        app:layout_constraintWidth_percent="0.3"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/passw"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:ems="10"
@@ -112,10 +116,11 @@
         android:importantForAutofill="no"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.055"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintWidth_percent="0.3"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -123,6 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
+        style="@style/materialButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -137,14 +143,15 @@
         android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/create"
+        style="@style/materialButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.075"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.82"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapS"
-        app:layout_constraintVertical_bias="0.336"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintVertical_bias="0.058"
+        app:layout_constraintWidth_percent="0.3" />
 
     <ProgressBar
         android:id="@+id/progressBarUp"
@@ -156,9 +163,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.82"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mapS"
-        app:layout_constraintVertical_bias="0.419"
+        app:layout_constraintVertical_bias="0.085"
         app:layout_constraintWidth_percent="0.3"
         tools:visibility="visible" />
 
