--- a/app/src/main/res/layout/delivery.xml
+++ b/app/src/main/res/layout/delivery.xml
@@ -10,7 +10,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintHorizontal_bias="0.487"
@@ -25,6 +26,8 @@
         android:layout_marginTop="8dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/note"
         app:layout_constraintEnd_toEndOf="@+id/note"
         app:layout_constraintHeight_percent="0.13"
@@ -42,6 +45,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/note"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/note"
         app:layout_constraintEnd_toEndOf="@+id/note"
         app:layout_constraintHeight_percent="0.03"
@@ -56,7 +61,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintHorizontal_bias="0.487"
@@ -70,6 +76,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/status"
         app:layout_constraintEnd_toEndOf="@+id/status"
         app:layout_constraintHeight_percent="0.03"
@@ -84,7 +92,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.487"
@@ -98,6 +107,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/time"
         app:layout_constraintEnd_toEndOf="@+id/time"
         app:layout_constraintHeight_percent="0.03"
@@ -115,6 +126,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/delivy_time"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="@+id/time"
         app:layout_constraintHeight_percent="0.03"
         app:layout_constraintHorizontal_bias="0.512"
@@ -127,7 +140,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.487"
@@ -141,6 +155,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/sent"
         app:layout_constraintEnd_toEndOf="@+id/sent"
         app:layout_constraintHeight_percent="0.03"
@@ -158,6 +174,8 @@
         android:autoSizeTextType="uniform"
         android:text="@string/sent"
         android:textStyle="bold"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintEnd_toEndOf="@+id/sent"
         app:layout_constraintHeight_percent="0.03"
         app:layout_constraintHorizontal_bias="0.512"
@@ -169,7 +187,8 @@
         android:id="@+id/from"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/round_corners"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
@@ -185,6 +204,8 @@
         android:layout_height="0dp"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
+        android:elevation="10dp"
+        style="@style/materialTabStyle"
         app:layout_constraintBottom_toBottomOf="@+id/from"
         app:layout_constraintEnd_toEndOf="@+id/from"
         app:layout_constraintHeight_percent="0.03"
@@ -196,14 +217,14 @@
 
     <Button
         android:id="@+id/backD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        style="@style/materialButtonStyleBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
