--- a/app/src/main/res/layout/language.xml
+++ b/app/src/main/res/layout/language.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/orange"
+        android:background="@color/color3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
@@ -21,10 +21,12 @@
 
     <ProgressBar
         android:id="@+id/progressBarL"
+        style="@android:style/Widget.Material.ProgressBar.Large"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:visibility="gone"
+        android:progressTint="@color/color4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
@@ -33,7 +35,6 @@
         app:layout_constraintVertical_bias="0.351"
         app:layout_constraintWidth_percent="0.25"
         tools:visibility="visible" />
-
     <TextView
         android:id="@+id/currLS"
         android:layout_width="0dp"
@@ -51,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.344"
         app:layout_constraintWidth_percent="0.8"
-        tools:visibility="visible" />
+        tools:visibility="visible"/>
 
     <Button
         android:id="@+id/english"
@@ -63,11 +64,12 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLE"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.6" />
+        app:layout_constraintWidth_percent="0.6"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/slovak"
@@ -79,23 +81,24 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLS"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.6" />
+        app:layout_constraintWidth_percent="0.6"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/backD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        style="@style/materialButtonStyleBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"/>
 
     <TextView
         android:id="@+id/currLE"
@@ -114,7 +117,7 @@
         app:layout_constraintTop_toBottomOf="@+id/slovak"
         app:layout_constraintVertical_bias="0.059"
         app:layout_constraintWidth_percent="0.8"
-        tools:visibility="visible" />
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/textView"
@@ -125,7 +128,7 @@
         android:text="@string/changeLang"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHeight_percent="0.05"
