--- a/app/src/main/res/layout/mapsignup.xml
+++ b/app/src/main/res/layout/mapsignup.xml
@@ -18,15 +18,15 @@
 
     <Button
         android:id="@+id/backD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        style="@style/materialButtonStyleBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"/>
 
     <Button
         android:id="@+id/confirm"
@@ -37,12 +37,13 @@
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.945"
         app:layout_constraintWidth_percent="0.6"
-        app:layout_constraintHeight_percent="0.08"/>
+        app:layout_constraintHeight_percent="0.07"
+        style="@style/materialButtonStyle"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
