--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/orange"
+        android:background="@color/color3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,7 +33,8 @@
         app:layout_constraintTop_toBottomOf="@+id/view"
         tools:ignore="VisualLintButtonSize"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.8"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/language"
@@ -49,7 +50,8 @@
         app:layout_constraintTop_toBottomOf="@+id/history"
         tools:ignore="VisualLintButtonSize"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.8"
+        style="@style/materialButtonStyle"/>
 
     <Button
         android:id="@+id/signout"
@@ -66,7 +68,8 @@
         app:layout_constraintVertical_bias="0.463"
         tools:ignore="VisualLintButtonSize"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintWidth_percent="0.8"
+        style="@style/materialButtonStyle"/>
 
     <ImageView
         android:id="@+id/qr_code"
@@ -89,15 +92,15 @@
         android:autoSizeMaxTextSize="34sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.05"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16"
+        app:layout_constraintVertical_bias="0.135"
         app:layout_constraintWidth_percent="0.9" />
 
     <TextView
@@ -108,7 +111,7 @@
         android:autoSizeMaxTextSize="16sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
@@ -120,15 +123,15 @@
 
     <Button
         android:id="@+id/backP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        style="@style/materialButtonStyleBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.054"/>
 
     <ImageView
         android:id="@+id/no_connection"
@@ -141,7 +144,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359"
+        app:layout_constraintVertical_bias="0.534"
         app:layout_constraintWidth_percent="0.2"
         app:srcCompat="@drawable/no_access"
         tools:visibility="visible" />
