--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -10,15 +10,16 @@
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FCAE31"
+        android:background="@color/color3"
         android:contentDescription="@string/logo"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/quickbox_logo"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintWidth_percent="1.0"/>
+        app:layout_constraintWidth_percent="1.0"
+        app:srcCompat="@drawable/quickbox_logo" />
 
     <Button
         android:id="@+id/signinB"
@@ -33,7 +34,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:layout_constraintVertical_bias="0.305"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintWidth_percent="0.75"
+        style="@style/materialButtonStyle"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -91,7 +93,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintVertical_bias="0.076"
-        app:layout_constraintWidth_percent="0.4" />
+        app:layout_constraintWidth_percent="0.4"/>
 
     <TextView
         android:id="@+id/welcome"
@@ -107,7 +109,7 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signin"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="0.7"/>
 
 
     <TextView
@@ -130,7 +132,8 @@
         app:layout_constraintTop_toBottomOf="@+id/createacc"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.2"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        style="@style/materialTabStyle"/>
 
     <TextView
         android:id="@+id/createacc"
@@ -148,7 +151,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
         app:layout_constraintVertical_bias="0.106"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintWidth_percent="0.55"
+        style="@style/materialTabStyle"/>
 
     <ProgressBar
         android:id="@+id/progressBarUp"
