--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,35 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.QuickBoxFront" parent="Theme.Material3.DayNight.NoActionBar">
-<!-- Customize your theme here. -->
+    <style name="Theme.QuickBoxFront" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/black</item>
-        <item name="android:colorPrimaryDark">@color/purpledark</item>
-        <item name="android:colorSecondary">@color/purpledark</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
+        <item name="android:colorPrimary">@color/color3</item>
         <item name="android:textColorPrimary">@color/white</item>
     </style>
+
+    <style name="materialButtonStyle" parent="Theme.QuickBoxFront">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/round_corners_button</item>
+        <item name="android:backgroundTint">@color/color5</item>
+    </style>
+    <style name="SplashTheme" parent="Theme.QuickBoxFront">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:scaleGravity">center</item>
+        <item name="android:scaleType">center</item>
+        <item name="colorPrimary">@color/color3</item>
+        <item name="colorSecondary">@color/color3</item>
+        <item name="colorTertiary">@color/color3</item>
+        <item name="android:statusBarColor">@color/color3</item>
+        <item name="android:navigationBarColor">@color/color3</item>
+    </style>
+    <style name="materialTabStyle" parent="Theme.QuickBoxFront">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@drawable/round_corners</item>
+        <item name="android:backgroundTint">@color/color6</item>
+    </style>
+    <style name="materialButtonStyleBack" parent="Theme.QuickBoxFront">
+        <item name="android:background">@drawable/back_button_dark</item>
+    </style>
+
 </resources>
