--- a/app/src/main/res/layout-sw600dp/mapsignup.xml
+++ b/app/src/main/res/layout-sw600dp/mapsignup.xml
@@ -18,16 +18,15 @@
 
     <Button
         android:id="@+id/backD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.054"
-        style="@style/materialButtonStyle"/>
+        style="@style/materialButtonStyleBack"/>
 
     <Button
         android:id="@+id/confirm"
