--- a/app/src/main/res/layout-sw600dp/home.xml
+++ b/app/src/main/res/layout-sw600dp/home.xml
@@ -11,23 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
+        <androidx.cardview.widget.CardView
             android:id="@+id/mapH"
+            style="@style/materialTabStyle"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:elevation="10dp"
-            style="@style/materialTabStyle"
             android:contentDescription="@string/map"
-            android:scaleType="centerInside"
-            android:src="@drawable/journey"
+            android:elevation="10dp"
+            app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintHorizontal_bias="0.07"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/viewPager"
-            app:layout_constraintVertical_bias="0.446"
-            app:layout_constraintWidth_percent="0.4" />
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintHorizontal_bias="0.08"
+            app:layout_constraintWidth_percent="0.4">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:elevation="10dp"
+                    android:scaleType="center"
+                    android:src="@drawable/map" />
+
+                <TextView
+                    style="@style/materialTabStyle"
+                    android:layout_width="80dp"
+                    android:layout_height="50dp"
+                    android:layout_centerInParent="true"
+                    android:elevation="10dp"
+                    android:gravity="center"
+                    android:text="@string/map"
+                    android:textAlignment="center"
+                    android:textSize="22sp" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <ImageView
             android:id="@+id/logo"
