--- a/app/src/main/res/layout-sw600dp/signin.xml
+++ b/app/src/main/res/layout-sw600dp/signin.xml
@@ -37,7 +37,6 @@
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -58,7 +57,6 @@
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -75,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcome"
         app:layout_constraintVertical_bias="0.142"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.3"/>
 
     <TextView
         android:id="@+id/signin"
@@ -91,7 +89,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintVertical_bias="0.076"
-        app:layout_constraintWidth_percent="0.2" />
+        app:layout_constraintWidth_percent="0.2"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/welcome"
@@ -107,7 +106,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signin"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/textStyle"/>
 
 
     <TextView
@@ -130,7 +130,8 @@
         app:layout_constraintTop_toBottomOf="@+id/createacc"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.1"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/createacc"
@@ -148,7 +149,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
         app:layout_constraintVertical_bias="0.158"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/textStyle"/>
 
     <ProgressBar
         android:id="@+id/progressBarUp"
@@ -161,6 +163,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:layout_constraintVertical_bias="0.298"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/no_connection"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="@+id/logo"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        app:layout_constraintVertical_bias="0.081"
+        app:layout_constraintWidth_percent="0.2"
+        app:srcCompat="@drawable/no_access"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
