--- a/app/src/main/res/layout-sw600dp/signup.xml
+++ b/app/src/main/res/layout-sw600dp/signup.xml
@@ -18,7 +18,8 @@
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.2" />
+        app:layout_constraintWidth_percent="0.2"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -34,7 +35,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.3"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/error"
@@ -69,22 +71,47 @@
         app:layout_constraintWidth_percent="0.3"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <ImageButton
+    <androidx.cardview.widget.CardView
         android:id="@+id/mapS"
+        style="@style/materialTabStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="36dp"
-        android:elevation="10dp"
-        style="@style/materialTabStyle"
         android:contentDescription="@string/map"
-        android:scaleType="centerInside"
-        android:src="@drawable/journey"
+        android:elevation="10dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toEndOf="@+id/email"
+        app:layout_constraintStart_toEndOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/error"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.3">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="10dp"
+                android:scaleType="center"
+                android:src="@drawable/map" />
+
+            <TextView
+                style="@style/materialTabStyle"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:elevation="10dp"
+                android:gravity="center"
+                android:text="@string/map"
+                android:textAlignment="center"
+                android:textSize="22sp" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <EditText
         android:id="@+id/name"
@@ -125,10 +152,9 @@
 
     <Button
         android:id="@+id/backB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        style="@style/materialButtonStyle"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        style="@style/materialButtonStyleBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -168,6 +194,23 @@
         app:layout_constraintTop_toBottomOf="@+id/mapS"
         app:layout_constraintVertical_bias="0.085"
         app:layout_constraintWidth_percent="0.3"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/no_connection"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="TODO"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.997"
+        app:layout_constraintStart_toEndOf="@+id/backB"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.347"
+        app:layout_constraintWidth_percent="0.2"
+        app:srcCompat="@drawable/no_access"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
