--- a/app/src/main/res/layout/language.xml
+++ b/app/src/main/res/layout/language.xml
@@ -52,7 +52,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.344"
         app:layout_constraintWidth_percent="0.8"
-        tools:visibility="visible"/>
+        tools:visibility="visible"
+        style="@style/textStyle"/>
 
     <Button
         android:id="@+id/english"
@@ -117,7 +118,8 @@
         app:layout_constraintTop_toBottomOf="@+id/slovak"
         app:layout_constraintVertical_bias="0.059"
         app:layout_constraintWidth_percent="0.8"
-        tools:visibility="visible"/>
+        tools:visibility="visible"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/textView"
