--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -83,23 +83,6 @@
         app:layout_constraintWidth_percent="0.9"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/noDel"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:autoSizeMaxTextSize="32sp"
-            android:autoSizeTextType="uniform"
-            android:text="@string/nodelnearby"
-            android:textAlignment="center"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/scrollDel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.6"
-            tools:visibility="visible" />
-
         <ScrollView
             android:id="@+id/scrollDel"
             android:layout_width="0dp"
@@ -120,6 +103,24 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </ScrollView>
+
+        <TextView
+            android:id="@+id/noDel"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:autoSizeMaxTextSize="32sp"
+            android:autoSizeTextType="uniform"
+            android:text="@string/nodelnearby"
+            android:textAlignment="center"
+            android:visibility="visible"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/scrollDel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.6"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/down"
