--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -39,7 +39,6 @@
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -60,7 +59,6 @@
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -93,7 +91,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintVertical_bias="0.076"
-        app:layout_constraintWidth_percent="0.4"/>
+        app:layout_constraintWidth_percent="0.4"
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/welcome"
@@ -109,7 +108,8 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signin"
-        app:layout_constraintWidth_percent="0.7"/>
+        app:layout_constraintWidth_percent="0.7"
+        style="@style/textStyle"/>
 
 
     <TextView
@@ -133,7 +133,7 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.2"
         tools:ignore="TouchTargetSizeCheck"
-        style="@style/materialTabStyle"/>
+        style="@style/textStyle"/>
 
     <TextView
         android:id="@+id/createacc"
@@ -152,7 +152,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signinB"
         app:layout_constraintVertical_bias="0.106"
         app:layout_constraintWidth_percent="0.55"
-        style="@style/materialTabStyle"/>
+        style="@style/textStyle"/>
 
     <ProgressBar
         android:id="@+id/progressBarUp"
