--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -31,5 +31,8 @@
     <style name="materialButtonStyleBack" parent="Theme.QuickBoxFront">
         <item name="android:background">@drawable/back_button_dark</item>
     </style>
+    <style name="textStyle" parent="Theme.QuickBoxFront">
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
