--- a/quickboxwear/src/main/res/layout/mainlayout.xml
+++ b/quickboxwear/src/main/res/layout/mainlayout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCAC32"
+    android:background="@color/color3"
     android:gravity="center">
 
     <ScrollView
@@ -28,14 +28,6 @@
                 android:padding="10sp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/quickbox_logo" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                tools:visibility="visible" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
