--- a/app/src/main/res/layout-sw600dp/home.xml
+++ b/app/src/main/res/layout-sw600dp/home.xml
@@ -71,6 +71,23 @@
             app:layout_constraintWidth_percent="1"
             app:srcCompat="@drawable/quickbox_logo" />
 
+        <ImageView
+            android:id="@+id/no_connection"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="TODO"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/logo"
+            app:layout_constraintEnd_toEndOf="@+id/logo"
+            app:layout_constraintHeight_percent="0.08"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/logo"
+            app:layout_constraintVertical_bias="0.132"
+            app:layout_constraintWidth_percent="0.2"
+            app:srcCompat="@drawable/no_access"
+            tools:visibility="visible" />
+
         <ImageButton
             android:id="@+id/profileH"
             android:layout_width="0dp"
